--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body style="background-color: rgb(255, 255, 255)">
     <h1>Das hier wird eine colle Urlaubswebseite!</h1>
     <p style="color: red;">Ein kleiner Absatz.</p>
-    <p>In Europa gibt es viele gute Reiseziele.</p>
-    <p>In Amerika gibt es viele gute Reiseziele.</p>
+    <p>In Europa gibt es viele gute Reiseziele!</p>
+    <p>In Amerika gibt es viele gute Reiseziele!</p>
     <p>Nochmal mehr Inhalt!</p>
     <p>Nochmal mehr Inhalt!</p>
     <a href="#">Nach oben springen</a>
