--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p style="color: red;">Ein kleiner Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele!</p>
     <p>In Amerika gibt es viele gute Reiseziele!</p>
+    <a href = "#"> Nach oben springen</a>
+
     <p>Nochmal mehr Inhalt!</p>
     <p>Nochmal mehr Inhalt!</p>
     <a href="#">Nach oben springen</a>
