--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background-color: rgb(100, 100, 100)">
     <h1>Das hier wird eine colle Urlaubswebseite!</h1>
-    <p style="color: red;">Ein kleiner Absatz!</p>
+    <p style="color: green;">Ein kleiner Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele!</p>
     <p>In Amerika gibt es viele gute Reiseziele!</p>
     <a href = "#"> Nach oben springen</a>
